@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.06-dev
 
+use apxs PREFIX to resolve relative httpd.conf directives
+ServerRoot is not present [Mike Cramer]
+
 add support for a new subclass method 'bug_report', which if provided
 will be called when 'make test' fails. we use it in mod_perl to print
 the pointers on how to proceed when the failure occurs. [Stas]
